--- a/thundax.ai.dproj
+++ b/thundax.ai.dproj
@@ -1,139 +1,169 @@
-﻿	<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-		<PropertyGroup>
-			<ProjectGuid>{BF3C57AF-89D5-49DF-8A59-F43E19812E38}</ProjectGuid>
-			<MainSource>thundax.ai.dpk</MainSource>
-			<ProjectVersion>12.2</ProjectVersion>
-			<Base>True</Base>
-			<Config Condition="'$(Config)'==''">Debug</Config>
-			<Platform>Win32</Platform>
-			<AppType>Package</AppType>
-			<FrameworkType>VCL</FrameworkType>
-			<DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
-		</PropertyGroup>
-		<PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
-			<Base>true</Base>
-		</PropertyGroup>
-		<PropertyGroup Condition="'$(Config)'=='Debug' or '$(Cfg_1)'!=''">
-			<Cfg_1>true</Cfg_1>
-			<CfgParent>Base</CfgParent>
-			<Base>true</Base>
-		</PropertyGroup>
-		<PropertyGroup Condition="'$(Config)'=='Release' or '$(Cfg_2)'!=''">
-			<Cfg_2>true</Cfg_2>
-			<CfgParent>Base</CfgParent>
-			<Base>true</Base>
-		</PropertyGroup>
-		<PropertyGroup Condition="'$(Base)'!=''">
-			<GenPackage>true</GenPackage>
-			<DCC_DcuOutput>.\$(Config)\$(Platform)</DCC_DcuOutput>
-			<DCC_ImageBase>00400000</DCC_ImageBase>
-			<DCC_UnitAlias>WinTypes=Windows;WinProcs=Windows;DbiTypes=BDE;DbiProcs=BDE;$(DCC_UnitAlias)</DCC_UnitAlias>
-			<DCC_CBuilderOutput>All</DCC_CBuilderOutput>
-			<DCC_E>false</DCC_E>
-			<DCC_S>false</DCC_S>
-			<GenDll>true</GenDll>
-			<DCC_N>false</DCC_N>
-			<DCC_F>false</DCC_F>
-			<DCC_K>false</DCC_K>
-		</PropertyGroup>
-		<PropertyGroup Condition="'$(Cfg_1)'!=''">
-			<DCC_DcuOutput>dcu\</DCC_DcuOutput>
-			<DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
-			<DCC_Optimize>false</DCC_Optimize>
-			<DCC_GenerateStackFrames>true</DCC_GenerateStackFrames>
-		</PropertyGroup>
-		<PropertyGroup Condition="'$(Cfg_2)'!=''">
-			<DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
-			<DCC_Define>RELEASE;$(DCC_Define)</DCC_Define>
-			<DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
-			<DCC_DebugInformation>false</DCC_DebugInformation>
-		</PropertyGroup>
-		<ItemGroup>
-			<DelphiCompile Include="thundax.ai.dpk">
-				<MainSource>MainSource</MainSource>
-			</DelphiCompile>
-			<DCCReference Include="rtl.dcp"/>
-			<DCCReference Include="vcl.dcp"/>
-			<DCCReference Include="lib\thundax.ai.spanningTree.pas"/>
-			<DCCReference Include="lib\thundax.ai.maths.pas"/>
-			<DCCReference Include="lib\thundax.ai.coordenate.pas"/>
-			<DCCReference Include="lib\thundax.ai.matrix.pas"/>
-			<DCCReference Include="lib\thundax.ai.layout.generator.pas"/>
-			<DCCReference Include="lib\thundax.ai.convexHull.pas"/>
-			<DCCReference Include="lib\thundax.ai.matrix.columns.pas"/>
-			<DCCReference Include="lib\thundax.ai.matrix.bind.pas"/>
-			<DCCReference Include="lib\thundax.ai.matrix.arraytypes.pas"/>
-			<DCCReference Include="lib\thundax.ai.vector.pas"/>
-			<DCCReference Include="lib\thundax.ai.table.pas"/>
-			<DCCReference Include="lib\thundax.ai.parser.pas"/>
-			<DCCReference Include="lib\thundax.ai.scanner.pas"/>
-			<DCCReference Include="lib\thundax.ai.tokens.pas"/>
-			<DCCReference Include="lib\thundax.ai.layout.text.pas"/>
-			<DCCReference Include="lib\thundax.ai.stringHelper.pas"/>
-			<DCCReference Include="lib\thundax.ai.attribute.ordinal.pas"/>
-			<DCCReference Include="lib\thundax.ai.attribute.numerical.pas"/>
-			<DCCReference Include="lib\thundax.ai.attribute.pas"/>
-			<DCCReference Include="lib\thundax.ai.attribute.list.pas"/>
-			<DCCReference Include="lib\thundax.ai.classInstance.pas"/>
-			<DCCReference Include="lib\thundax.ai.classInstance.list.pas"/>
-			<DCCReference Include="lib\thundax.ai.attribute.dictionary.pas"/>
-			<DCCReference Include="lib\thundax.ai.attribute.average.pas"/>
-			<DCCReference Include="lib\thundax.ai.attribute.average.list.pas"/>
-			<DCCReference Include="lib\thundax.ai.attribute.average.list.sorted.pas"/>
-			<BuildConfiguration Include="Release">
-				<Key>Cfg_2</Key>
-				<CfgParent>Base</CfgParent>
-			</BuildConfiguration>
-			<BuildConfiguration Include="Base">
-				<Key>Base</Key>
-			</BuildConfiguration>
-			<BuildConfiguration Include="Debug">
-				<Key>Cfg_1</Key>
-				<CfgParent>Base</CfgParent>
-			</BuildConfiguration>
-		</ItemGroup>
-		<Import Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')" Project="$(BDS)\Bin\CodeGear.Delphi.Targets"/>
-		<Import Condition="Exists('$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\8.0\UserTools.proj')" Project="$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\8.0\UserTools.proj"/>
-		<ProjectExtensions>
-			<Borland.Personality>Delphi.Personality.12</Borland.Personality>
-			<Borland.ProjectType>Package</Borland.ProjectType>
-			<BorlandProject>
-				<Delphi.Personality>
-					<Source>
-						<Source Name="MainSource">thundax.ai.dpk</Source>
-					</Source>
-					<VersionInfo>
-						<VersionInfo Name="IncludeVerInfo">True</VersionInfo>
-						<VersionInfo Name="AutoIncBuild">False</VersionInfo>
-						<VersionInfo Name="MajorVer">1</VersionInfo>
-						<VersionInfo Name="MinorVer">0</VersionInfo>
-						<VersionInfo Name="Release">0</VersionInfo>
-						<VersionInfo Name="Build">0</VersionInfo>
-						<VersionInfo Name="Debug">False</VersionInfo>
-						<VersionInfo Name="PreRelease">False</VersionInfo>
-						<VersionInfo Name="Special">False</VersionInfo>
-						<VersionInfo Name="Private">False</VersionInfo>
-						<VersionInfo Name="DLL">False</VersionInfo>
-						<VersionInfo Name="Locale">2057</VersionInfo>
-						<VersionInfo Name="CodePage">1252</VersionInfo>
-					</VersionInfo>
-					<VersionInfoKeys>
-						<VersionInfoKeys Name="CompanyName">Jordi Corbilla</VersionInfoKeys>
-						<VersionInfoKeys Name="FileDescription">Jordi Corbilla</VersionInfoKeys>
-						<VersionInfoKeys Name="FileVersion">1.0.0.0</VersionInfoKeys>
-						<VersionInfoKeys Name="InternalName">Jordi Corbilla</VersionInfoKeys>
-						<VersionInfoKeys Name="LegalCopyright">Jordi Corbilla</VersionInfoKeys>
-						<VersionInfoKeys Name="LegalTrademarks">Jordi Corbilla</VersionInfoKeys>
-						<VersionInfoKeys Name="OriginalFilename">Jordi Corbilla</VersionInfoKeys>
-						<VersionInfoKeys Name="ProductName">Jordi Corbilla</VersionInfoKeys>
-						<VersionInfoKeys Name="ProductVersion">1.0.0.0</VersionInfoKeys>
-						<VersionInfoKeys Name="Comments">Jordi Corbilla</VersionInfoKeys>
-					</VersionInfoKeys>
-				</Delphi.Personality>
-				<Platforms>
-					<Platform value="Win32">True</Platform>
-				</Platforms>
-			</BorlandProject>
-			<ProjectFileVersion>12</ProjectFileVersion>
-		</ProjectExtensions>
-	</Project>
+﻿<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+    <PropertyGroup>
+        <ProjectGuid>{BF3C57AF-89D5-49DF-8A59-F43E19812E38}</ProjectGuid>
+        <MainSource>thundax.ai.dpk</MainSource>
+        <ProjectVersion>15.4</ProjectVersion>
+        <Base>True</Base>
+        <Config Condition="'$(Config)'==''">Debug</Config>
+        <AppType>Package</AppType>
+        <FrameworkType>VCL</FrameworkType>
+        <DCC_DCCCompiler>DCC32</DCC_DCCCompiler>
+        <TargetedPlatforms>1</TargetedPlatforms>
+        <Platform Condition="'$(Platform)'==''">Win32</Platform>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Config)'=='Base' or '$(Base)'!=''">
+        <Base>true</Base>
+    </PropertyGroup>
+    <PropertyGroup Condition="('$(Platform)'=='Android' and '$(Base)'=='true') or '$(Base_Android)'!=''">
+        <Base_Android>true</Base_Android>
+        <CfgParent>Base</CfgParent>
+        <Base>true</Base>
+    </PropertyGroup>
+    <PropertyGroup Condition="('$(Platform)'=='Win32' and '$(Base)'=='true') or '$(Base_Win32)'!=''">
+        <Base_Win32>true</Base_Win32>
+        <CfgParent>Base</CfgParent>
+        <Base>true</Base>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Config)'=='Debug' or '$(Cfg_1)'!=''">
+        <Cfg_1>true</Cfg_1>
+        <CfgParent>Base</CfgParent>
+        <Base>true</Base>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Config)'=='Release' or '$(Cfg_2)'!=''">
+        <Cfg_2>true</Cfg_2>
+        <CfgParent>Base</CfgParent>
+        <Base>true</Base>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Base)'!=''">
+        <VerInfo_Keys>CompanyName=Jordi Corbilla;FileDescription=Jordi Corbilla;FileVersion=1.0.0.0;InternalName=Jordi Corbilla;LegalCopyright=Jordi Corbilla;LegalTrademarks=Jordi Corbilla;OriginalFilename=Jordi Corbilla;ProductName=Jordi Corbilla;ProductVersion=1.0.0.0;Comments=Jordi Corbilla</VerInfo_Keys>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <SanitizedProjectName>thundax_ai</SanitizedProjectName>
+        <DCC_Namespace>Vcl;Vcl.Imaging;Vcl.Touch;Vcl.Samples;Vcl.Shell;System;Xml;Data;Datasnap;Web;Soap;Winapi;$(DCC_Namespace)</DCC_Namespace>
+        <VerInfo_Locale>2057</VerInfo_Locale>
+        <GenPackage>true</GenPackage>
+        <DCC_DcuOutput>.\$(Config)\$(Platform)</DCC_DcuOutput>
+        <DCC_ImageBase>00400000</DCC_ImageBase>
+        <DCC_CBuilderOutput>All</DCC_CBuilderOutput>
+        <DCC_E>false</DCC_E>
+        <DCC_S>false</DCC_S>
+        <GenDll>true</GenDll>
+        <DCC_N>false</DCC_N>
+        <DCC_F>false</DCC_F>
+        <DCC_K>false</DCC_K>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Base_Android)'!=''">
+        <VerInfo_Keys>package=com.embarcadero.$(MSBuildProjectName);label=$(MSBuildProjectName);versionCode=1;versionName=1.0.0;persistent=False;restoreAnyVersion=False;installLocation=preferExternal;largeHeap=False;theme=TitleBar;hardwareAccelerated=true</VerInfo_Keys>
+        <VerInfo_IncludeVerInfo>false</VerInfo_IncludeVerInfo>
+        <BT_BuildType>Debug</BT_BuildType>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Base_Win32)'!=''">
+        <DCC_Namespace>Winapi;System.Win;Data.Win;Datasnap.Win;Web.Win;Soap.Win;Xml.Win;Bde;$(DCC_Namespace)</DCC_Namespace>
+        <VerInfo_Locale>1033</VerInfo_Locale>
+        <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
+        <VerInfo_Keys>CompanyName=;FileDescription=;FileVersion=1.0.0.0;InternalName=;LegalCopyright=;LegalTrademarks=;OriginalFilename=;ProductName=;ProductVersion=1.0.0.0;Comments=</VerInfo_Keys>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Cfg_1)'!=''">
+        <DCC_DcuOutput>dcu\</DCC_DcuOutput>
+        <DCC_Define>DEBUG;$(DCC_Define)</DCC_Define>
+        <DCC_Optimize>false</DCC_Optimize>
+        <DCC_GenerateStackFrames>true</DCC_GenerateStackFrames>
+    </PropertyGroup>
+    <PropertyGroup Condition="'$(Cfg_2)'!=''">
+        <DCC_LocalDebugSymbols>false</DCC_LocalDebugSymbols>
+        <DCC_Define>RELEASE;$(DCC_Define)</DCC_Define>
+        <DCC_SymbolReferenceInfo>0</DCC_SymbolReferenceInfo>
+        <DCC_DebugInformation>0</DCC_DebugInformation>
+    </PropertyGroup>
+    <ItemGroup>
+        <DelphiCompile Include="$(MainSource)">
+            <MainSource>MainSource</MainSource>
+        </DelphiCompile>
+        <DCCReference Include="rtl.dcp"/>
+        <DCCReference Include="vcl.dcp"/>
+        <DCCReference Include="lib\thundax.ai.spanningTree.pas"/>
+        <DCCReference Include="lib\thundax.ai.maths.pas"/>
+        <DCCReference Include="lib\thundax.ai.coordenate.pas"/>
+        <DCCReference Include="lib\thundax.ai.matrix.pas"/>
+        <DCCReference Include="lib\thundax.ai.layout.generator.pas"/>
+        <DCCReference Include="lib\thundax.ai.convexHull.pas"/>
+        <DCCReference Include="lib\thundax.ai.matrix.columns.pas"/>
+        <DCCReference Include="lib\thundax.ai.matrix.bind.pas"/>
+        <DCCReference Include="lib\thundax.ai.matrix.arraytypes.pas"/>
+        <DCCReference Include="lib\thundax.ai.vector.pas"/>
+        <DCCReference Include="lib\thundax.ai.table.pas"/>
+        <DCCReference Include="lib\thundax.ai.parser.pas"/>
+        <DCCReference Include="lib\thundax.ai.scanner.pas"/>
+        <DCCReference Include="lib\thundax.ai.tokens.pas"/>
+        <DCCReference Include="lib\thundax.ai.layout.text.pas"/>
+        <DCCReference Include="lib\thundax.ai.stringHelper.pas"/>
+        <DCCReference Include="lib\thundax.ai.attribute.ordinal.pas"/>
+        <DCCReference Include="lib\thundax.ai.attribute.numerical.pas"/>
+        <DCCReference Include="lib\thundax.ai.attribute.pas"/>
+        <DCCReference Include="lib\thundax.ai.attribute.list.pas"/>
+        <DCCReference Include="lib\thundax.ai.classInstance.pas"/>
+        <DCCReference Include="lib\thundax.ai.classInstance.list.pas"/>
+        <DCCReference Include="lib\thundax.ai.attribute.dictionary.pas"/>
+        <DCCReference Include="lib\thundax.ai.attribute.average.pas"/>
+        <DCCReference Include="lib\thundax.ai.attribute.average.list.pas"/>
+        <DCCReference Include="lib\thundax.ai.attribute.average.list.sorted.pas"/>
+        <BuildConfiguration Include="Release">
+            <Key>Cfg_2</Key>
+            <CfgParent>Base</CfgParent>
+        </BuildConfiguration>
+        <BuildConfiguration Include="Base">
+            <Key>Base</Key>
+        </BuildConfiguration>
+        <BuildConfiguration Include="Debug">
+            <Key>Cfg_1</Key>
+            <CfgParent>Base</CfgParent>
+        </BuildConfiguration>
+    </ItemGroup>
+    <Import Condition="Exists('$(BDS)\Bin\CodeGear.Delphi.Targets')" Project="$(BDS)\Bin\CodeGear.Delphi.Targets"/>
+    <ProjectExtensions>
+        <Borland.Personality>Delphi.Personality.12</Borland.Personality>
+        <Borland.ProjectType>Package</Borland.ProjectType>
+        <BorlandProject>
+            <Delphi.Personality>
+                <Source>
+                    <Source Name="MainSource">thundax.ai.dpk</Source>
+                </Source>
+                <VersionInfo>
+                    <VersionInfo Name="IncludeVerInfo">True</VersionInfo>
+                    <VersionInfo Name="AutoIncBuild">False</VersionInfo>
+                    <VersionInfo Name="MajorVer">1</VersionInfo>
+                    <VersionInfo Name="MinorVer">0</VersionInfo>
+                    <VersionInfo Name="Release">0</VersionInfo>
+                    <VersionInfo Name="Build">0</VersionInfo>
+                    <VersionInfo Name="Debug">False</VersionInfo>
+                    <VersionInfo Name="PreRelease">False</VersionInfo>
+                    <VersionInfo Name="Special">False</VersionInfo>
+                    <VersionInfo Name="Private">False</VersionInfo>
+                    <VersionInfo Name="DLL">False</VersionInfo>
+                    <VersionInfo Name="Locale">2057</VersionInfo>
+                    <VersionInfo Name="CodePage">1252</VersionInfo>
+                </VersionInfo>
+                <VersionInfoKeys>
+                    <VersionInfoKeys Name="CompanyName">Jordi Corbilla</VersionInfoKeys>
+                    <VersionInfoKeys Name="FileDescription">Jordi Corbilla</VersionInfoKeys>
+                    <VersionInfoKeys Name="FileVersion">1.0.0.0</VersionInfoKeys>
+                    <VersionInfoKeys Name="InternalName">Jordi Corbilla</VersionInfoKeys>
+                    <VersionInfoKeys Name="LegalCopyright">Jordi Corbilla</VersionInfoKeys>
+                    <VersionInfoKeys Name="LegalTrademarks">Jordi Corbilla</VersionInfoKeys>
+                    <VersionInfoKeys Name="OriginalFilename">Jordi Corbilla</VersionInfoKeys>
+                    <VersionInfoKeys Name="ProductName">Jordi Corbilla</VersionInfoKeys>
+                    <VersionInfoKeys Name="ProductVersion">1.0.0.0</VersionInfoKeys>
+                    <VersionInfoKeys Name="Comments">Jordi Corbilla</VersionInfoKeys>
+                </VersionInfoKeys>
+            </Delphi.Personality>
+            <Platforms>
+                <Platform value="Android">False</Platform>
+                <Platform value="iOSDevice">False</Platform>
+                <Platform value="iOSSimulator">False</Platform>
+                <Platform value="Win32">True</Platform>
+                <Platform value="Win64">False</Platform>
+            </Platforms>
+        </BorlandProject>
+        <ProjectFileVersion>12</ProjectFileVersion>
+    </ProjectExtensions>
+    <Import Project="$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj" Condition="Exists('$(APPDATA)\Embarcadero\$(BDSAPPDATABASEDIR)\$(PRODUCTVERSION)\UserTools.proj')"/>
+</Project>
